# ArithmeticQt

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  mainwindow.cpp  mainwindow.h
.github/workflows/: cmake.yml
converter/: README.md  converter.c
src/: arithmetic.cpp  arithmetic.h  arithmetic.hpp  arthmetic.cpp  arthmetic.h  calculator.cpp  calculator.h  calculator.hpp  generator.cpp  generator.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  test.c
